--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,9 +31,7 @@ test:
     - apt update -yy
     - apt install -yy curl
     - curl https://raw.githubusercontent.com/creationix/nvm/master/install.sh | bash
-    - export NVM_DIR="$HOME/.nvm"
-      [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
-      [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"
+    - export NVM_DIR="$HOME/.nvm" && [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" && [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"
     - nvm install 16 && nvm use 16 && nvm alias default 16
     - npm install -g npm@latest
     - npm ci
