--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,12 @@ test:
   script:
     - sh -c 'echo "127.0.0.11 proxy.local\n" >> /etc/hosts'
     - apt update -yy
-    - apt install -yy curl
+    - apt-get remove docker docker-engine docker.io containerd runc
+    - apt install -yy curl     ca-certificates     gnupg     lsb-release
+    - sudo mkdir -p /etc/apt/keyrings
+    - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
+    - echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+    - apt-get install docker-ce docker-ce-cli containerd.io docker-compose-plugin
     - curl https://raw.githubusercontent.com/creationix/nvm/master/install.sh | bash
     - export NVM_DIR="$HOME/.nvm" && [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" && [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"
     - nvm install 16 && nvm use 16 && nvm alias default 16
