--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,8 +29,8 @@ test:
   script:
     - sh -c 'echo "127.0.0.11 proxy.local\n" >> /etc/hosts'
     - apt update -yy
-    - apt install -yy curl     ca-certificates     gnupg     lsb-release
-    - sudo mkdir -p /etc/apt/keyrings
+    - apt install -yy curl  ca-certificates     gnupg     lsb-release
+    - mkdir -p /etc/apt/keyrings
     - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
     - echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
     - apt install -yy docker-ce docker-ce-cli containerd.io docker-compose-plugin
