--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,7 +41,9 @@ test:
     - sh -c 'echo "127.0.0.11 proxy.local\n" >> /etc/hosts'
     - apt update -yy
     - apt install -yy curl  ca-certificates   sudo  gnupg     lsb-release
-    - mkdir -p /etc/apt/keyrings
+    - curl -L "https://github.com/docker/compose/releases/download/v2.3.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+    - docker compose -f deployments/testing/docker-compose.yml up -d
+#    - mkdir -p /etc/apt/keyrings
 #    - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg
 #    - echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
 #    - apt update -yy
@@ -52,7 +54,6 @@ test:
     - npm install -g npm@latest
     - npm ci
     - set -x
-    - docker compose -f deployments/testing/docker-compose.yml up -d
     - set -x
     - sleep 60
     - npm test
