--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,6 +42,7 @@ test:
     - apt update -yy
     - apt install -yy curl  ca-certificates   sudo  gnupg     lsb-release
     - curl -L "https://github.com/docker/compose/releases/download/v2.3.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+    - chmod +x /usr/local/bin/docker-compose
     - docker compose -f deployments/testing/docker-compose.yml up -d
 #    - mkdir -p /etc/apt/keyrings
 #    - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg
