--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,25 +37,21 @@ test:
     # DOCKER_TLS_CERTDIR: ""
   services:
     - docker:dind
-  script:
+  before_script:
     - sh -c 'echo "127.0.0.11 proxy.local\n" >> /etc/hosts'
     - apt update -yy
     - apt install -yy curl  ca-certificates   sudo  gnupg     lsb-release
     - curl -L "https://github.com/docker/compose/releases/download/v2.3.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
     - chmod +x /usr/local/bin/docker-compose
     - docker-compose -f deployments/testing/docker-compose.yml up -d
-#    - mkdir -p /etc/apt/keyrings
-#    - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg
-#    - echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
-#    - apt update -yy
-#    - apt install -yy docker-ce docker-ce-cli containerd.io docker-compose-plugin
     - curl https://raw.githubusercontent.com/creationix/nvm/master/install.sh | bash
     - export NVM_DIR="$HOME/.nvm" && [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" && [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"
     - nvm install 16 && nvm use 16 && nvm alias default 16
     - npm install -g npm@latest
+    - docker-compose -f deployments/testing/docker-compose.yml ps
+  script:
     - npm ci
-    - set -x
-    - set -x
-    - sleep 60
     - npm test
+  after_script:
+    - docker-compose -f deployments/testing/docker-compose.yml down
 
