--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,8 +48,10 @@ test:
     - export NVM_DIR="$HOME/.nvm" && [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" && [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"
     - nvm install 16 && nvm use 16 && nvm alias default 16
     - npm install -g npm@latest
+    - cat /etc/hosts
     - docker-compose -f deployments/testing/docker-compose.yml ps
   script:
+    - nc -zvw3 127.0.0.1 6379 || true
     - npm ci
     - npm test
   after_script:
