--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,6 +52,7 @@ test:
     - docker-compose -f deployments/testing/docker-compose.yml ps
   script:
     - nc -zvw3 127.0.0.1 6379 || true
+    - nc -zvw3 172.17.0.2 6379 || true
     - npm ci
     - npm test
   after_script:
