--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ pages:
 
 
 test:
-  image: ubuntu:latest
+  image: docker:latest
   stage: test
   tags:
     - testing
@@ -39,24 +39,20 @@ test:
     - docker:dind
   before_script:
     - sh -c 'echo "127.0.0.11 proxy.local\n" >> /etc/hosts'
-    - apt update -yy
-    - apt install -yy curl netcat ca-certificates net-tools  sudo  gnupg     lsb-release
-    - curl -L "https://github.com/docker/compose/releases/download/v2.3.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-    - chmod +x /usr/local/bin/docker-compose
-    - docker-compose -f deployments/testing/docker-compose.yml up -d
-    - curl https://raw.githubusercontent.com/creationix/nvm/master/install.sh | bash
-    - export NVM_DIR="$HOME/.nvm" && [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" && [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"
-    - nvm install 16 && nvm use 16 && nvm alias default 16
-    - npm install -g npm@latest
+    - docker compose -f deployments/testing/docker-compose.yml up -d
+#    - curl https://raw.githubusercontent.com/creationix/nvm/master/install.sh | bash
+#    - export NVM_DIR="$HOME/.nvm" && [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" && [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"
+#    - nvm install 16 && nvm use 16 && nvm alias default 16
+#    - npm install -g npm@latest
     - cat /etc/hosts
-    - docker-compose -f deployments/testing/docker-compose.yml ps
+    - docker compose -f deployments/testing/docker-compose.yml ps
     - netstat -a
   script:
     - nc -zvw3 127.0.0.1 6379 || true
     - nc -zvw3 172.17.0.2 6379 || true
     - nc -zvw3 docker 6379 || true
-    - npm ci
-    - npm test
+#    - npm ci
+#    - npm test
   after_script:
-    - docker-compose -f deployments/testing/docker-compose.yml down
+    - docker compose -f deployments/testing/docker-compose.yml down
 
