--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,4 @@
+# https://medium.com/devops-with-valentine/how-to-start-a-docker-container-inside-your-gitlab-ci-pipeline-bfeb610c3f4
 image: node:lts
 
 variables:
@@ -39,11 +40,12 @@ test:
     - docker:dind
   before_script:
     - sh -c 'echo "127.0.0.11 proxy.local\n" >> /etc/hosts'
+    - apk add curl bash
     - docker compose -f deployments/testing/docker-compose.yml up -d
-#    - curl https://raw.githubusercontent.com/creationix/nvm/master/install.sh | bash
-#    - export NVM_DIR="$HOME/.nvm" && [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" && [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"
-#    - nvm install 16 && nvm use 16 && nvm alias default 16
-#    - npm install -g npm@latest
+    - curl https://raw.githubusercontent.com/creationix/nvm/master/install.sh | bash
+    - export NVM_DIR="$HOME/.nvm" && [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" && [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"
+    - nvm install 16 && nvm use 16 && nvm alias default 16
+    - npm install -g npm@latest
     - cat /etc/hosts
     - docker compose -f deployments/testing/docker-compose.yml ps
     - netstat -a
