--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,8 +53,8 @@ test:
     - nc -zvw3 127.0.0.1 6379 || true
     - nc -zvw3 172.17.0.2 6379 || true
     - nc -zvw3 docker 6379 || true
-#    - npm ci
-#    - npm test
+    - npm ci
+    - npm test
   after_script:
     - docker compose -f deployments/testing/docker-compose.yml down
 
