--- a/services/ubuntu-docker/Dockerfile
+++ b/services/ubuntu-docker/Dockerfile
@@ -15,4 +15,10 @@ RUN apt update -yy && \
       docker-ce  \
       docker-ce-cli  \
       containerd.io  \
-      docker-compose-plugin
+      docker-compose-plugin &&\
+    curl https://raw.githubusercontent.com/creationix/nvm/master/install.sh | bash &&\
+    export NVM_DIR="$HOME/.nvm" && [ -s "$NVM_DIR/nvm.sh" ] && sh "$NVM_DIR/nvm.sh" && [ -s "$NVM_DIR/bash_completion" ] && sh "$NVM_DIR/bash_completion" &&\
+    nvm install 16 &&\
+    nvm use 16 &&\
+    nvm alias default 16 &&\
+    npm install -g npm@latest
