--- a/services/ubuntu-docker/Dockerfile
+++ b/services/ubuntu-docker/Dockerfile
@@ -9,6 +9,8 @@ RUN apt update -yy && \
       curl \
       gnupg \
       lsb-release \
+      netcat \
+      net-tools \
       bash && \
     mkdir -p /etc/apt/keyrings &&\
     curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg &&\
