--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,6 +65,8 @@ test:
     - docker compose -f deployments/testing/docker-compose.yml ps
     - netstat -a
   script:
+    - node -v
+    - npm -v
     - nc -zvw3 127.0.0.1 6379 || true
     - nc -zvw3 172.17.0.2 6379 || true
     - nc -zvw3 docker 6379 || true
