--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,11 +65,12 @@ test:
     - docker compose -f deployments/testing/docker-compose.yml ps
     - netstat -a
   script:
-    - node -v
-    - npm -v
+    - pwd
     - nc -zvw3 127.0.0.1 6379 || true
     - nc -zvw3 172.17.0.2 6379 || true
     - nc -zvw3 docker 6379 || true
+    - node -v
+    - npm -v
     - npm ci
     - npm test
   after_script:
