--- a/services/ubuntu-docker/Dockerfile
+++ b/services/ubuntu-docker/Dockerfile
@@ -9,6 +9,10 @@ RUN apt update -yy && \
       curl \
       gnupg \
       sudo \
+      gcc \
+      g++ \
+      make \
+      libpq-dev \
       lsb-release \
       netcat \
       net-tools \
