--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,8 +56,8 @@ test:
     # If you want to secure the communication between the container of this build job and the Docker service you have to slightly change the configuration of the GitLab runner. (see https://about.gitlab.com/blog/2019/07/31/docker-in-docker-with-docker-19-dot-03/)
     # Since in my case everything is running on the same server I can live with this communication not being encrypted.
     # DOCKER_TLS_CERTDIR: ""
-  services:
-    - docker:dind
+#  services:
+#    - docker:dind
   before_script:
     - bash
     - sh -c 'echo "127.0.0.11 proxy.local\n" >> /etc/hosts'
