--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,8 +60,6 @@ test:
     # If you want to secure the communication between the container of this build job and the Docker service you have to slightly change the configuration of the GitLab runner. (see https://about.gitlab.com/blog/2019/07/31/docker-in-docker-with-docker-19-dot-03/)
     # Since in my case everything is running on the same server I can live with this communication not being encrypted.
     # DOCKER_TLS_CERTDIR: ""
-  services:
-    - docker:dind
   before_script:
     - bash
     - echo $HOSTNAME
@@ -71,6 +69,8 @@ test:
     - cat /etc/hosts
     - docker compose -f deployments/testing/docker-compose.yml ps
     - docker network list
+    - DOCKERINFO=$(curl -s --unix-socket /var/run/docker.sock http://docker/containers/$HOSTNAME/json)
+    - echo $DOCKERINFO
     - docker network connect testing_txs_base_net /
     - netstat -a
   script:
