--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,6 +71,8 @@ test:
     - docker network list
     - DOCKERINFO=$(curl -s --unix-socket /var/run/docker.sock http://docker/containers/json)
     - echo $DOCKERINFO
+    - echo $DOCKERINFO > data.json
+    - node -e "const data = require('./data.json'); console.log(data)";
     - docker network connect testing_txs_base_net /
     - netstat -a
   script:
