--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "@angular/platform-browser-dynamic": "v12-lts",
     "@angular/router": "v12-lts",
     "@antora/cli": "^3.1.1",
+    "@antora/lunr-extension": "^1.0.0-alpha.8",
     "@antora/site-generator-default": "^3.1.1",
     "@cezaryrk/minimatch": "3.0.4",
     "@fortawesome/fontawesome-free": "5.15.3",
@@ -171,6 +172,7 @@
     "karma-coverage": "2.0.3",
     "karma-jasmine": "4.0.1",
     "karma-jasmine-html-reporter": "1.6.0",
+    "ldapjs": "^2.3.3",
     "light-server": "2.9.1",
     "lodash": "4.17.21",
     "merge-stream": "2.0.0",
