--- a/packages/base/test/functional/messaging/fs/fake_app/config/typexs.yml
+++ b/packages/base/test/functional/messaging/fs/fake_app/config/typexs.yml
@@ -17,8 +17,8 @@ eventbus:
   default:
     adapter: redis
     extra:
-      host: '127.0.0.1'
-      port: 6379
+      host: ${env.REDIS_HOST:-localhost}
+      port: ${env.REDIS_PORT:-6379}
       unref: true
 
 storage:
