--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,15 +51,24 @@ test:
   stage: test
   tags:
     - testing
-    #  variables:
-    # Set the Docker host to be the one of the previously created service (This forwards the user of the docker command to this service instead of running it inside the container of this build job.)
-    # DOCKER_HOST: unix:///var/run/docker.sock
-    # By GitLab recommended storage driver when using Docker-in-Docker (see https://docs.gitlab.com/ee/ci/docker/using_docker_build.html#use-the-overlayfs-driver)
-    # DOCKER_DRIVER: overlay2
-    # Disable the need for certificates when this build job communicates with the Docker service
-    # If you want to secure the communication between the container of this build job and the Docker service you have to slightly change the configuration of the GitLab runner. (see https://about.gitlab.com/blog/2019/07/31/docker-in-docker-with-docker-19-dot-03/)
-    # Since in my case everything is running on the same server I can live with this communication not being encrypted.
-    # DOCKER_TLS_CERTDIR: ""
+  variables:
+    REDIS_HOST: redis
+    REDIS_PORT: 6379
+    REDIS2_HOST: redis2
+    REDIS2_PORT: 6379
+    POSTGRES_HOST: psql
+    POSTGRES_PORT: 5432
+    POSTGRES_AUTH_HOST: psql-auth
+    POSTGRES_AUTH_PORT: 5432
+    MYSQL_HOST: mysql
+    MYSQL_PORT: 3306
+    MONGO_HOST: mongo
+    MONGO_PORT: 27017
+    ES_HOST: elastic
+    ES_PORT: 9200
+    LDAP_HOST: ldap
+    LDAP_PORT: 389
+    LDAPS_PORT: 689
   before_script:
     - bash
     - echo $HOSTNAME
@@ -75,12 +84,7 @@ test:
     - docker network connect testing_txs_base_net $CONTAINER_ID
     - netstat -a
   script:
-    - bash
-    - pwd
-    - nc -zvw3 127.0.0.1 6379 || true
-    - nc -zvw3 redis 6379 || true
-    - nc -zvw3 172.17.0.2 6379 || true
-    - nc -zvw3 docker 6379 || true
+    - nc -zvw3 $REDIS_HOST $REDIS_PORT || true
     - node -v
     - npm -v
     - npm ci
