--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,7 +36,7 @@ build ldap image:
     - echo "{\"auths\":{\"${CI_REGISTRY}\":{\"username\":\"${CI_REGISTRY_USER}\",\"password\":\"${CI_REGISTRY_PASSWORD}\"}}}" > /kaniko/.docker/config.json
   script:
     - /kaniko/executor
-      --context="${CI_PROJECT_DIR}"
+      --context="${CI_PROJECT_DIR}"/services/ldap
       --dockerfile="${CI_PROJECT_DIR}/services/ldap/Dockerfile"
       --destination "${CI_REGISTRY_IMAGE}/ldap"
   rules:
