--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ build docker image:
     - echo "{\"auths\":{\"${CI_REGISTRY}\":{\"username\":\"${CI_REGISTRY_USER}\",\"password\":\"${CI_REGISTRY_PASSWORD}\"}}}" > /kaniko/.docker/config.json
   script:
     - /kaniko/executor
-      --context="${CI_PROJECT_DIR}"
+      --context="${CI_PROJECT_DIR}"/services/ubuntu-docker
       --dockerfile="${CI_PROJECT_DIR}/services/ubuntu-docker/Dockerfile"
       --destination "${CI_REGISTRY_IMAGE}/ubuntu-docker"
   rules:
