--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -83,9 +83,10 @@ test:
   before_script:
     - sh -c 'echo "127.0.0.11 proxy.local\n" >> /etc/hosts'
     - docker compose -f deployments/testing/docker-compose.yml up -d
-    - cd /
-    - ./docker-entrypoint.sh
-    - cd /build/typexs/typexs
+    - DOCKERINFO=$(curl -s --unix-socket /var/run/docker.sock http://docker/containers/json)
+    - echo $DOCKERINFO > docker.json
+    - export CONTAINER_ID=`node -e "const data = require('./docker.json'); console.log(data.find(x => /ubuntu\-docker/.test(x.Image)).Id);"`
+    - docker network connect testing_txs_base_net $CONTAINER_ID
   script:
     - nc -zvw3 $REDIS_HOST $REDIS_PORT || true
     - node -v
