--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,6 +25,7 @@ build docker image:
   rules:
     - if: '$CI_PIPELINE_SOURCE == "push"'
       changes:
+        - .gitlab-ci.yml
         - services/ubuntu-docker/**/*
 
 build ldap image:
@@ -42,6 +43,7 @@ build ldap image:
   rules:
     - if: '$CI_PIPELINE_SOURCE == "push"'
       changes:
+        - .gitlab-ci.yml
         - services/ldap/**/*
 
 
