--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -87,6 +87,7 @@ test:
     - docker compose -f deployments/testing/docker-compose.yml up -d
     - DOCKERINFO=$(curl -s --unix-socket /var/run/docker.sock http://docker/containers/json)
     - echo $DOCKERINFO > docker.json
+    - node -e "const data = require('./docker.json'); console.log(data);"
     - export CONTAINER_ID=`node -e "const data = require('./docker.json'); console.log(data.find(x => /ubuntu\-docker/.test(x.Image)).Id);"`
     - docker network connect testing_txs_base_net $CONTAINER_ID
   script:
