--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,8 +48,12 @@ jobs:
           name: Test
           command: npm test
 
+      - run:
+          name: Coverage
+          command: npx codecov -f coverage/**/*.json
+
 # Orchestrate our job run sequence
-#workflows:
-#  test:
-#    jobs:
-#      - test
+workflows:
+  test:
+    jobs:
+      - test
