--- a/packages/base/docs/antora.yml
+++ b/packages/base/docs/antora.yml
@@ -1,7 +1,6 @@
-name: testing
-title: '@typexs/testing'
+name: base
+title: '@typexs/base'
 version: ~
-# display_version: Deutsch
 start_page: ROOT:index.adoc
 nav:
   - modules/ROOT/nav.adoc
