--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -112,8 +112,11 @@ test:
         - package.json
         - package-lock.json
         - src/**
+        - src/**/*
         - test/**
+        - test/**/*
         - packages/*/src/**
+        - packages/*/src/**/*
         - packages/*/test/**
-        - deployments/testing/**
+        - packages/*/test/**/*
 
