--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -31,7 +31,7 @@
     "@allgemein/moduls": "~1.6.5",
     "@allgemein/schema-api": "~1.5.27",
     "@cezaryrk/minimatch": "~3.0.4",
-    "ajv": "8.11.0",
+    "ajv": "^8.6.2",
     "fast-safe-stringify": "2.1.1",
     "js-yaml": "4.1.0",
     "lodash": "^4.17.21",
