--- a/packages/roles/package.json
+++ b/packages/roles/package.json
@@ -2,8 +2,8 @@
   "name": "@typexs/roles",
   "version": "0.0.0-PLACEHOLDER",
   "description": "",
-  "main": "./index.ts",
-  "browser": "./browser.ts",
+  "main": "./index",
+  "browser": "./browser",
   "scripts": {
     "test": "nyc mocha test/{**,**/**,**/**/**}/*.spec.ts",
     "posttest": "nyc report --reporter=json"
