--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@typexs/typexs",
-  "version": "2.0.43",
-  "tag": "v2-lts",
+  "version": "2.1.0",
+  "tag": "v2-dev",
   "main": "index.js",
   "browser": "browser.js",
   "directories": {
