--- a/packages/entity/package.json
+++ b/packages/entity/package.json
@@ -33,7 +33,8 @@
   "peerDependencies": {
     "@typexs/base": "0.0.0-PLACEHOLDER",
     "@typexs/pipelines": "0.0.0-PLACEHOLDER",
-    "@typexs/server": "0.0.0-PLACEHOLDER"
+    "@typexs/server": "0.0.0-PLACEHOLDER",
+    "@typexs/storage": "0.0.0-PLACEHOLDER"
   },
   "private": true,
   "typexs": {
