--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,23 +9,23 @@ stages:
   - test
 
 
-build docker image:
-  stage: build
-  image:
-    name: gcr.io/kaniko-project/executor:debug
-    entrypoint: [ "" ]
-  before_script:
-    - echo "{\"auths\":{\"${CI_REGISTRY}\":{\"username\":\"${CI_REGISTRY_USER}\",\"password\":\"${CI_REGISTRY_PASSWORD}\"}}}" > /kaniko/.docker/config.json
-  script:
-    - /kaniko/executor
-      --context="${CI_PROJECT_DIR}"/services/ubuntu-docker
-      --dockerfile="${CI_PROJECT_DIR}/services/ubuntu-docker/Dockerfile"
-      --destination "${CI_REGISTRY_IMAGE}/ubuntu-docker"
-  rules:
-    - if: '$CI_PIPELINE_SOURCE == "push"'
-      changes:
-        - .gitlab-ci.yml
-        - services/ubuntu-docker/**/*
+#build docker image:
+#  stage: build
+#  image:
+#    name: gcr.io/kaniko-project/executor:debug
+#    entrypoint: [ "" ]
+#  before_script:
+#    - echo "{\"auths\":{\"${CI_REGISTRY}\":{\"username\":\"${CI_REGISTRY_USER}\",\"password\":\"${CI_REGISTRY_PASSWORD}\"}}}" > /kaniko/.docker/config.json
+#  script:
+#    - /kaniko/executor
+#      --context="${CI_PROJECT_DIR}"/services/ubuntu-docker
+#      --dockerfile="${CI_PROJECT_DIR}/services/ubuntu-docker/Dockerfile"
+#      --destination "${CI_REGISTRY_IMAGE}/ubuntu-docker"
+#  rules:
+#    - if: '$CI_PIPELINE_SOURCE == "push"'
+#      changes:
+#        - .gitlab-ci.yml
+#        - services/ubuntu-docker/**/*
 
 build ldap image:
   stage: build
@@ -67,7 +67,7 @@ pages:
         - packages/*/docs/**/*
 
 test:
-  image: ${CI_REGISTRY_IMAGE}/ubuntu-docker:latest
+  image: thinkbaer/ubuntu-docker-node-chrome:latest
   stage: test
   tags:
     - dind
