--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,7 +49,7 @@ pages:
         - packages/*/docs/**/*
 
 test:
-  image: thinkbaer/ubuntu-docker-node-chrome:latest
+  image: thinkbaer/ubuntu-docker-node-chrome:u2204_n18
   stage: test
   tags:
     - dind
