--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
   "devDependencies": {
     "@allgemein/http": "~1.2.0",
     "@allgemein/moduls": "~1.6.5",
-    "@allgemein/packaging": "~1.2.18",
+    "@allgemein/packaging": "1.2.19",
     "@angular-devkit/build-angular": "v12-lts",
     "@angular-devkit/core": "v12-lts",
     "@angular-devkit/schematics": "v12-lts",
@@ -102,7 +102,6 @@
     "@types/gulp": "^4.0.9",
     "@types/gulp-bump": "^2.8.2",
     "@types/gulp-replace": "^1.1.0",
-    "@types/gulp-sourcemaps": "^0.0.35",
     "@types/gulp-watch": "^4.1.35",
     "@types/jasmine": "^4.3.0",
     "@types/jquery": "^3.5.14",
@@ -152,7 +151,7 @@
     "gulp-mocha": "8.0.0",
     "gulp-replace": "1.1.3",
     "gulp-shell": "0.8.0",
-    "gulp-sourcemaps": "3.0.0",
+    "gulp-sourcemaps": "^3.0.0",
     "gulp-typescript": "5.0.1",
     "jasmine": "4.0.2",
     "jquery": "3.6.0",
@@ -171,7 +170,6 @@
     "mongodb": "3.6.9",
     "mysql": "2.18.1",
     "ng-packagr": "12.2.7",
-    "nyc": "15.1.0",
     "perfect-scrollbar": "1.5.1",
     "pg": "8.6.0",
     "prismjs": "1.23.0",
