--- a/package.json
+++ b/package.json
@@ -170,6 +170,7 @@
     "mongodb": "3.6.9",
     "mysql": "2.18.1",
     "ng-packagr": "12.2.7",
+    "nyc": "^15.1.0",
     "perfect-scrollbar": "1.5.1",
     "pg": "8.6.0",
     "prismjs": "1.23.0",
